@@ -15,8 +15,8 @@ my $t = Test::Mojo->new('MojoliciousTest');
 
 # Application is already available
 is $t->app->routes->find('something')->to_string, '/test4/:something', 'right pattern';
-is $t->app->routes->find('test3')->pattern->defaults->{namespace},      'MojoliciousTestController', 'right namespace';
-is $t->app->routes->find('withblock')->pattern->defaults->{controller}, 'foo',                       'right controller';
+is $t->app->routes->find('test3')->pattern->defaults->{namespace},      'MojoliciousTest2::Foo', 'right namespace';
+is $t->app->routes->find('withblock')->pattern->defaults->{controller}, 'foo',                   'right controller';
 is ref $t->app->routes->find('something'), 'Mojolicious::Routes::Route', 'right class';
 is ref $t->app->routes->find('something')->root, 'Mojolicious::Routes', 'right class';
 is $t->app->sessions->cookie_domain, '.example.com', 'right domain';
